# milai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  evaluation.md  feature.md  refactoring.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
specs/: future.md
specs/001-ai-language-learning/: data-model.md  future.md  plan.md  quickstart.md  research.md  spec.md
specs/001-mvp-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-adaptive-agents/: tasks.md
specs/v1-mvp-tui/: data-model.md  future.md  plan.md  quickstart.md  research.md  spec.md
specs/v2-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/milai/: __init__.py  config.py  main.py
tests/: __init__.py
tests/contract/: test_io_mediator.py  test_llm_contract.py  test_state_prompts_contract.py  test_storage_contract.py
tests/fakes/: __init__.py  llm_client.py  mediator.py  storage_client.py
tests/integration/: test_curriculum_review.py  test_learning_loop.py  test_llm_client.py  test_onboarding_assessment.py  test_startup_recovery.py  test_startup_session_choice.py  test_storage.py
tests/unit/: test_assessment_handler.py  test_assessment_prompts.py  test_assessment_review_handler.py  test_completion_handlers.py  test_config.py  test_curriculum_generation_handler.py  test_curriculum_prompts.py  test_curriculum_review_handler.py  test_deviation_handler.py  test_deviation_prompts.py  test_lesson_handler.py  test_srs.py  (+6 more)
(+53 files in other folders)
